# debvader

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  field_img_2.npy  pyproject.toml  requirements-macM1M2.txt  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: python-package.yml  python_tests.yml
data/dc2_imgs/field/: field_img.npy  gal_coordinates_complete_match.npy
debvader/: Untitled.ipynb  __init__.py  batch_generator.py  callbacks.py  cutout_img_dc2.py  deblender.py  debvader.py  detection.py  extraction.py  generator.py  io_utils.py  metrics.py  model.py  normalize.py  optimization.py  position_optimization  position_optimization.py  train.py  utils.py
debvader/tests/: test_debvader.py  test_extraction.py
notebooks/: Untitled.ipynb  behavior_of_latent_space.ipynb  core.12368.REMOVED.git-id  core.13801.REMOVED.git-id  core.146.REMOVED.git-id  core.3848.REMOVED.git-id  dc2_stamps_and_corresponding_parameters-Copy1.ipynb  deblender_to_onnx.ipynb  deblending_dc2_images.ipynb  training_example.ipynb
onnx/: README.md
ressources/: requirements.txt  requirements_dev.txt
src/debvader/: __init__.py  deblender.py  detection.py  model.py
src/debvader/deblend/: deblender.py  field_deblender.py  model.py
tests/: test_detection.py  test_extraction.py  test_training.py
tools/: Untitled.ipynb  callbacks.py  generator.py  model.py  utils.py
tutorials/: deblending_dc2_images.ipynb
weights/dc2/: checkpoint  weights_noisy_v4.304-898.88.ckpt.data-00001-of-00002
(+46 files in other folders)
